FIX - iPad layout issues

--- a/inc/scss/_media-queries.scss
+++ b/inc/scss/_media-queries.scss
@@ -560,6 +560,10 @@ nav {
 	max-width: 100%;
 }
 
+.wrapper-destinations .img {
+	height: 20em;
+}
+
 /*---CONTENT---*/
 
 .heading__xl {
